Add expense account value, status and rename column in receipt
